fixed bottom spacing

--- a/tfjs01/css/styles.css
+++ b/tfjs01/css/styles.css
@@ -288,6 +288,7 @@
             margin-top: 730px;
             margin-left: 10%;
             width: 80%;
+            height: 1500px;
         }
         
         #left-col {
